add media query css - player

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <section class="container debug">
-        <div class="main debug-red">
-            <div class="content debug-blu"></div>
-            <div class="sidebar debug-blu"></div>
+    <section class="container">
+        <div class="main">
+            <div class="content"></div>
+            <div class="sidebar"></div>
         </div>
-        <div class="player debug-red">
-            <div class="play-bar debug-blu"></div>
+        <div class="player">
+            <div class="play-bar">
+                <div class="brano debug">Brano</div>
+                <div class="play debug">Play</div>
+                <div class="vol debug">Volume</div>
+            </div>
         </div>
     </section>
 </body>
