add brano area - player

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify web</title>
 
+    <script src="https://kit.fontawesome.com/f3495c860c.js" crossorigin="anonymous"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -19,7 +21,12 @@
         </div>
         <div class="player">
             <div class="play-bar">
-                <div class="brano debug">Brano</div>
+                <div class="brano">
+                    <figure class="img-brano"><img src="./img/sinister.jpeg" alt=""></figure>
+                    <strong class="txt-brano">Sinister <br> <span class="txt-brano-name">Brano nome</span></strong>
+                    <span class="icon-brano"><a href="#"><i class="fa-regular fa-heart"></i></span></a>
+                    <span class="icon-brano"><a href="#"><i class="fa-regular fa-folder"></i></span></a>
+                </div>
                 <div class="play debug">Play</div>
                 <div class="vol debug">Volume</div>
             </div>
