add play music area - player

--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
                     <span class="icon-brano"><a href="#"><i class="fa-regular fa-heart"></i></span></a>
                     <span class="icon-brano"><a href="#"><i class="fa-regular fa-folder"></i></span></a>
                 </div>
-                <div class="play debug">Play</div>
+                <div class="play">
+                    <div class="cta-play">
+                        <button class="btn-music"><i class="fa-solid fa-shuffle"></i></button>
+                        <button class="btn-music"><i class="fa-solid fa-backward-step"></i></button>
+                        <button class="btn-play"><i class="fa-regular fa-circle-play"></i></button>
+                        <button class="btn-music"><i class="fa-solid fa-forward-step"></i></button>
+                        <button class="btn-music"><i class="fa-solid fa-rotate-right"></i></button>
+                    </div>
+                    <div class="time-play">
+                        <strong class="time">0:25</strong>
+                        <span class="music"></span>
+                        <strong class="time">4:35</strong>
+                    </div>      
+                </div>
                 <div class="vol debug">Volume</div>
             </div>
         </div>
