add volume area - player

--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
                         <strong class="time">4:35</strong>
                     </div>      
                 </div>
-                <div class="vol debug">Volume</div>
+                <div class="vol">
+                    <div class="cta-vol">
+                        <button class="btn-vol"><a href="#"><i class="fa-solid fa-list"></i></a></button>
+                        <button class="btn-vol"><a href="#"><i class="fa-solid fa-display"></i></a></button>
+                        <button class="btn-vol"><a href="#"><i class="fa-solid fa-volume-high"></i></a></button>
+                        <span class="vol-bar"></span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
