add sidebar structure

--- a/index.html
+++ b/index.html
@@ -17,8 +17,18 @@
     <section class="container">
         <div class="main">
             <div class="content"></div>
-            <div class="sidebar"></div>
+            <!-- SIDEBAR -->
+            <div class="sidebar">
+                <div class="logo debug">
+                    <a href="#"><img src="./img/logo.svg" alt=""></a>
+                </div>
+                <div class="menu debug"></div>
+                <div class="playlist"></div>
+                <div class="profile"></div>
+            </div>
         </div>
+
+        <!-- PLAYER -->
         <div class="player">
             <div class="play-bar">
                 <div class="brano">
@@ -51,6 +61,7 @@
                 </div>
             </div>
         </div>
+
     </section>
 </body>
 </html>
