--- a/index.html
+++ b/index.html
@@ -16,27 +16,44 @@
 <body>
     <section class="container">
         <div class="main">
+            <!-- CONTENUTO -->
             <div class="content"></div>
+
             <!-- SIDEBAR -->
             <div class="sidebar">
                 <div class="logo">
                     <a href="#"><img src="./img/logo.svg" alt=""></a>
                 </div>
-                <div class="menu debug">
+                <div class="logo-sm">
+                    <a href="#"><img src="./img/logo-small.svg" alt=""></a>
+                </div>
+                <div class="menu">
                     <div class="cta-menu">
                         <img class="home" src="./img/home.svg" alt="">
-                        <strong>Home</strong>
+                        <strong class="home-txt">Home</strong>
                     </div>
                     <div class="cta-menu">
                         <img class="search" src="./img/search.svg" alt="">
-                        <strong>Searc</strong>
+                        <strong class="search-txt">Cerca</strong>
                     </div>
                     <div class="cta-menu">
                         <img class="library" src="./img/libreria.svg" alt="">
-                        <strong>Library</strong>
+                        <strong class="library-txt">La tua libreria</strong>
                     </div>
                 </div>
-                <div class="playlist debug"></div>
+                <div class="playlist">
+                    <h2 class="title-playlist">PLAYLIST</h2>
+                    <div class="add-playlist"><i class="fa-solid fa-plus"></i><strong> Crea Playlist</strong></div>
+                    <ul>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                        <li>Nome Playlist</li>
+                    </ul>
+                </div>
                 <div class="profile debug"></div>
             </div>
         </div>
