--- a/index.html
+++ b/index.html
@@ -43,18 +43,21 @@
                 </div>
                 <div class="playlist">
                     <h2 class="title-playlist">PLAYLIST</h2>
-                    <div class="add-playlist"><i class="fa-solid fa-plus"></i><strong> Crea Playlist</strong></div>
-                    <ul>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
-                        <li>Nome Playlist</li>
+                    <div class="add-playlist">
+                        <i class="fa-solid fa-plus"></i>
+                        <strong> Crea Playlist</strong>
+                    </div>
+                    <ul class="name-playlist">
+                        <li class="name">Nome Playlist</li>
+                        <li class="name">Nome Playlist</li>
+                        <li class="name">Nome Playlist</li>
+                        <li class="name">Nome Playlist</li>
+                        <li class="name">Nome Playlist</li>
+                        <li class="name">Nome Playlist</li>
+                        <li class="name">Nome Playlist</li>
                     </ul>
                 </div>
-                <div class="profile debug"></div>
+                <div class="profile"></div>
             </div>
         </div>
 
