feat sidebar - profile area

--- a/index.html
+++ b/index.html
@@ -57,7 +57,17 @@
                         <li class="name">Nome Playlist</li>
                     </ul>
                 </div>
-                <div class="profile"></div>
+                <div class="profile">
+                    <div>
+                        <i class="fa-regular fa-circle-down"></i>
+                        <strong class="install-app">Installa app</strong>
+                    </div>
+                    <div class="line-profile"></div>
+                    <div class="name-profile">
+                        <figure><img clas="img-profile" src="./img/profile.svg" alt=""></figure>
+                        <strong class="name-user">Jhon Doe</strong>
+                    </div>
+                </div>
             </div>
         </div>
 
