feat sidebar - green line

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 </div>
                 <div class="menu">
                     <div class="cta-menu">
+                        <div class="line-green"></div>
                         <img class="home" src="./img/home.svg" alt="">
                         <strong class="home-txt">Home</strong>
                     </div>
