--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
     <section class="container">
         <div class="main">
             <!-- CONTENUTO -->
-            <div class="content"></div>
+            
+            <div class="content">
+                <div class="upgrade debug"></div>
+                <div class="navbar">
+                    <p class="items-nav">IN EVIDENZA</p>
+                    <p class="items-nav">PODCAST</p>
+                    <p class="items-nav">CLASSIFICHE</p>
+                    <p class="items-nav">GENERI E MOOD</p>
+                    <p class="items-nav">NUOVE USCITE</p>
+                    <p class="items-nav">SCOPRI</p>
+                </div>
+            </div>
 
             <!-- SIDEBAR -->
             <div class="sidebar">
