--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- CONTENUTO -->
             
             <div class="content">
-                <div class="upgrade debug"></div>
+                <div class="upgrade"></div>
                 <div class="navbar">
                     <p class="items-nav">IN EVIDENZA</p>
                     <p class="items-nav">PODCAST</p>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="line-profile"></div>
                     <div class="name-profile">
-                        <figure><img clas="img-profile" src="./img/profile.svg" alt=""></figure>
+                        <figure><img class="img-profile" src="./img/profile.svg" alt=""></figure>
                         <strong class="name-user">Jhon Doe</strong>
                     </div>
                 </div>
