feat content & upgrade area

--- a/index.html
+++ b/index.html
@@ -19,14 +19,21 @@
             <!-- CONTENUTO -->
             
             <div class="content">
-                <div class="upgrade"></div>
+                <div class="upgrade">
+                    <button class="btn-upgrade"><a href="#">EFFETTUA L'UPGRADE</a></button>
+                </div>
                 <div class="navbar">
-                    <p class="items-nav">IN EVIDENZA</p>
-                    <p class="items-nav">PODCAST</p>
-                    <p class="items-nav">CLASSIFICHE</p>
-                    <p class="items-nav">GENERI E MOOD</p>
-                    <p class="items-nav">NUOVE USCITE</p>
-                    <p class="items-nav">SCOPRI</p>
+                    <a href="#"><p class="items-nav">IN EVIDENZA</p></a>
+                    <a href="#"><p class="items-nav">PODCAST</p></a>
+                    <a href="#"><p class="items-nav">CLASSIFICHE</p></a>
+                    <a href="#"><p class="items-nav">GENERI E MOOD</p></a>
+                    <a href="#"><p class="items-nav">NUOVE USCITE</p></a>
+                    <a href="#"><p class="items-nav">SCOPRI</p></a>
+                </div>
+
+                <div class="recently">
+                    
+
                 </div>
             </div>
 
