add content playlist

--- a/index.html
+++ b/index.html
@@ -32,8 +32,51 @@
                 </div>
 
                 <div class="recently">
-                    
-
+                    <h1 class="title-category">Recently played</h1>
+                    <div class="row">
+                        <div class="col-1-6">
+                            <div class="card-play">
+                                <img class="play-img" src="./img/metal_lifting.jpg" alt="">
+                                <h3 class="play-title">Heavy metal</h3>
+                                <p class="sub-title">Subtitle</p>
+                            </div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="card-play">
+                                <img class="play-img" src="./img/metal_lifting.jpg" alt="">
+                                <h3 class="play-title">Heavy metal</h3>
+                                <p class="sub-title">Subtitle</p>
+                            </div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="card-play">
+                                <img class="play-img" src="./img/metal_lifting.jpg" alt="">
+                                <h3 class="play-title">Heavy metal</h3>
+                                <p class="sub-title">Subtitle</p>
+                            </div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="card-play">
+                                <img class="play-img" src="./img/metal_lifting.jpg" alt="">
+                                <h3 class="play-title">Heavy metal</h3>
+                                <p class="sub-title">Subtitle</p>
+                            </div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="card-play">
+                                <img class="play-img" src="./img/metal_lifting.jpg" alt="">
+                                <h3 class="play-title">Heavy metal</h3>
+                                <p class="sub-title">Subtitle</p>
+                            </div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="card-play">
+                                <img class="play-img" src="./img/metal_lifting.jpg" alt="">
+                                <h3 class="play-title">Heavy metal</h3>
+                                <p class="sub-title">Subtitle</p>
+                            </div>
+                        </div>
+                    </div>   
                 </div>
             </div>
 
