feat content playlist

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                         </div>
                         <div class="col-1-6">
                             <div class="card-play">
-                                <img class="play-img" src="./img/metal_lifting.jpg" alt="">
-                                <h3 class="play-title">Heavy metal</h3>
-                                <p class="sub-title">Subtitle</p>
+                                <img class="play-img" src="./img/stranger.jpeg" alt="">
+                                <h3 class="play-title">Stranger Things, Vol.1 (a netflix original Series Soundtrack)</h3>
+                                <p class="sub-title">Kyle Dixon & Michael Stein</p>
                             </div>
                         </div>
                         <div class="col-1-6">
@@ -76,7 +76,24 @@
                                 <p class="sub-title">Subtitle</p>
                             </div>
                         </div>
-                    </div>   
+                    </div>
+                    <h1 class="title-category personal-category">Creato per Jhon Doe</h1>
+                    <p class="sub-title sub-category">Più ascolti, più saranno accurati i suggerimenti</p>
+                    <div class="row">
+                        <div class="col-1-6">
+                            <div class="card-play">
+                                <img class="play-img" src="./img/radar.jpeg" alt="">
+                                <h3 class="play-title">Release Radar</h3>
+                            </div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="card-play">
+                                <img class="play-img" src="./img/mixdaily.jpeg" alt="">
+                                <h3 class="play-title">Daily mix 1</h3>
+                            </div>
+                        </div>
+                    </div> 
+                     
                 </div>
             </div>
 
