--- a/index.html
+++ b/index.html
@@ -93,7 +93,22 @@
                             </div>
                         </div>
                     </div> 
-                     
+                    <h1 class="title-category personal-category">Artisti più popolari</h1>
+                    <p class="sub-title sub-category">Più ascolti, più saranno accurati i suggerimenti</p>
+                    <div class="row">
+                        <div class="col-1-6">
+                            <div class="card-play">
+                                <img class="play-img img-circle" src="./img/youg.jpeg" alt="">
+                                <h3 class="play-title">Release Radar</h3>
+                            </div>
+                        </div>
+                        <div class="col-1-6">
+                            <div class="card-play">
+                                <img class="play-img img-circle" src="./img/einaudi.jpeg" alt="">
+                                <h3 class="play-title">Daily mix 1</h3>
+                            </div>
+                        </div>
+                    </div> 
                 </div>
             </div>
 
